# medusa-threed-rs

./: Cargo.toml  PHASE_4B_PLAN.md  README.md  build.rs
proto/farisland/common/v1/: identifiers.proto
proto/farisland/module/v1/: module_registry.proto
proto/farisland/threed/v1/: mesh.proto  metrology_callback.proto  point_cloud.proto  point_cloud_types.proto  scale_configuration.proto  threed_scan.proto
src/: colormap.rs  delaunator.rs  grid_mesher.rs  lib.rs  main.rs  mesh_service.rs  pcd.rs  proto.rs  resample.rs  scale_configuration_service.rs  scan.rs  scan_service.rs  service.rs  statistics.rs  stl.rs
